# unitree_ros

./: README.md
ps4_joystick/: CMakeLists.txt  package.xml
ps4_joystick/launch/: ramped_joystick.launch
ps4_joystick/scripts/: ramped_joystick.py
robots/a1_description/xacro/: const.xacro  gazebo.xacro
robots/go1_description/xacro/: gazebo.xacro
unitree_controller/: CMakeLists.txt
unitree_controller/src/: lowStatePub.cpp  move_publisher.cpp
unitree_gazebo/launch/: normal.launch
unitree_gazebo/worlds/: earth.world  space.world  stairs.world  stairs_new.world  stairs_single.world
unitree_legged_msgs/: CMakeLists.txt
unitree_legged_msgs/msg/: HighState.msg  LowCmd.msg  LowState.msg
unitree_legged_real/: CMakeLists.txt  ipconfig.sh
unitree_legged_real/include/: AOneData.hpp
unitree_legged_real/script/: init_robot.jl  init_sim_env.jl  init_sim_robot.jl  julia_robot_interface.jl  main.jl  read_check_joint_angles.jl  ros_node_main.jl  simple_quad_model.jl  test_julia_interface.jl  test_julia_swing_ctrl.jl  test_kinematics.jl  test_ros_integration.jl  test_rotation.jl  unitree.code-workspace  utils.jl
unitree_legged_real/src/exe/: position_mode.cpp  ros_udp.cpp  test.cpp  twist_sub.cpp
unitree_legged_real/src/julia/: julia_interface.cpp
